# cbconverter

./: .gitignore  .gitmodules  CMakeLists.txt  third_party_licenses.txt
.github/workflows/: build.yml
include/cbconverter/: export_rmesh.h  exporter.h  utils.h
src/: export_rmesh.cpp  exporter.cpp  main.cpp  utils.cpp
